Added feature based view engine

--- a/FlixPlay/FlixPlay.Web.csproj
+++ b/FlixPlay/FlixPlay.Web.csproj
@@ -200,6 +200,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CustomViewEngines\FeatureViewEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Business\" />
@@ -209,7 +210,6 @@
     <Folder Include="Models\Pages\" />
     <Folder Include="Models\Properties\" />
     <Folder Include="Static\" />
-    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
@@ -223,7 +223,9 @@
     <Content Include="modules\_protected\CMS\CMS.zip" />
     <Content Include="modules\_protected\EPiServer.Packaging.UI\web.config" />
     <Content Include="modules\_protected\EPiServer.Packaging.UI\EPiServer.Packaging.UI.zip" />
+    <Content Include="Features\Start\Index.cshtml" />
     <None Include="packages.config" />
+    <Content Include="Views\Shared\_Root.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
